force-app/main/default/objects/NamespaceSettings__c/NamespaceSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Namespace Settings</label>
</CustomObject>