force-app/main/default/objects/NamespaceSettings__c/fields/ClassPrefix__c.field-meta.xml
<CustomField>
    <fullName>ClassPrefix__c</fullName>
    <description>Namespace followed by . to prefix apex classes and visualforce pages</description>
    <inlineHelpText>Namespace followed by . to prefix apex classes and visualforce pages</inlineHelpText>
    <label>Class Prefix</label>
    <length>80</length>
    <type>Text</type>
</CustomField>