force-app/main/default/objects/NamespaceSettings__c/fields/ObjectPrefix__c.field-meta.xml
<CustomField>
    <fullName>ObjectPrefix__c</fullName>
    <defaultValue>&#39;&#39;</defaultValue>
    <description>The namespace followed by __ to prefix Salesforce Objects</description>
    <inlineHelpText>The namespace followed by __ to prefix Salesforce Objects</inlineHelpText>
    <label>Object Prefix</label>
    <length>80</length>
    <type>Text</type>
</CustomField>