force-app/main/default/objects/NamespaceSettings__c/fields/RawPrefix__c.field-meta.xml
<CustomField>
    <fullName>RawPrefix__c</fullName>
    <defaultValue>&#39;&#39;</defaultValue>
    <description>The namespace prefix by itself</description>
    <inlineHelpText>The namespace prefix by itself</inlineHelpText>
    <label>Raw Prefix</label>
    <length>80</length>
    <type>Text</type>
</CustomField>